--- a/index.html
+++ b/index.html
@@ -6,47 +6,8 @@
 
     <meta charset="UTF-8">
     <title>Trivia Game</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
 
-    <style>
-
-        body { /* Visual */ background: lightgrey;}
-
-      #image-holder {
-
-        /* Positioning */
-         margin: 0 auto;
-
-        /* Box-model */
-        width: 400px;
-
-        /* Typography */
-        text-align: center;
-
-      }
-
-      #buttons {
-
-        /* Positioning */
-        margin: 50px 0;
-
-        /* Typography */
-        text-align: center;
-
-      }
-
-      button {
-
-        /* Box-model */
-        width: 150px;
-        height: 60px;
-
-      }
-      img {
-          width:500;
-          height: 700;
-      }
-
-    </style>
 
 </head>
 
