--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Trivia Game</title>
+    <title>MJ Trivia Game</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
 
 
-</head>
+</head> 
 
 <body>
     <img src="https://i.gifer.com/GKtg.gif">
